--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a slackbot to do happy things",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/andersk2/workshop-slackbot/issues"
+  },
+  "engines": {
+    "node": ">=6.0.0"
   },
   "private": true,
   "homepage": "https://github.com/andersk2/workshop-slackbot#readme",
